// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PublicLink theming options should display the configuration theme general slogan as the login card footer 1`] = `
<div class="oc-card-footer">
  <p>
    some-slogan
  </p>
</div>
`;

exports[`PublicLink theming options should have the page-title set 1`] = `
<div class="oc-height-1-1 oc-link-resolve">
  <h1 class="oc-invisible-sr">some page title</h1>
  <div class="oc-card oc-border oc-rounded oc-position-center oc-text-center oc-width-large">
    <!---->
    <div class="oc-card-footer">
      <p>
        some-slogan
      </p>
    </div>
  </div>
</div>
`;

exports[`PublicLink when the view is not loading anymore and when "passwordRequired" is set as true and the password input should display the error message if "inputErrorMessage" is not empty 1`] = `<oc-text-input-stub id="oc-textinput-3" type="password" clearbuttonaccessiblelabel="" label="Enter password for public link" class="oc-mb-s" errormessage="some input error message"></oc-text-input-stub>`;

exports[`PublicLink when the view is not loading anymore and when "passwordRequired" is set as true and the password input should have a computed label 1`] = `<oc-text-input-stub id="oc-textinput-3" type="password" clearbuttonaccessiblelabel="" label="Enter password for public link" class="oc-mb-s"></oc-text-input-stub>`;

exports[`PublicLink when the view is not loading anymore and when "passwordRequired" is set as true and the submit button should be set as disabled if "password" is empty 1`] = `
<oc-button-stub type="button" disabled="true" size="medium" submit="submit" variation="primary" appearance="filled" justifycontent="center" gapsize="medium" class="oc-login-authorize-button">
  <translate-stub tag="span">Continue</translate-stub>
</oc-button-stub>
`;

exports[`PublicLink when the view is not loading anymore and when "passwordRequired" is set as true should display the password required form 1`] = `
<form>
  <div class="oc-card-header">
    <h2>
      <translate-stub tag="span">This resource is password-protected</translate-stub>
    </h2>
  </div>
  <div class="oc-card-body">
    <oc-text-input-stub id="oc-textinput-3" type="password" clearbuttonaccessiblelabel="" label="Enter password for public link" class="oc-mb-s"></oc-text-input-stub>
    <oc-button-stub type="button" disabled="true" size="medium" submit="submit" variation="primary" appearance="filled" justifycontent="center" gapsize="medium" class="oc-login-authorize-button">
      <translate-stub tag="span">Continue</translate-stub>
    </oc-button-stub>
  </div>
</form>
`;

exports[`PublicLink when the view is not loading anymore should display the error message if "errorMessage" is not empty 1`] = `
<div class="oc-card-header oc-link-resolve-error-title">
  <h2>
    <translate-stub tag="span">An error occurred while loading the public link</translate-stub>
  </h2>
</div>
`;

exports[`PublicLink when the view is still loading should display the loading text with the spinner 1`] = `
<div class="oc-card-body">
  <oc-spinner-stub arialabel="" size="medium" aria-hidden="true"></oc-spinner-stub>
</div>
`;
